[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clear-backend"
version = "0.1.0"
authors = [
    { name = "PhoebeHuHu" },
]
description = "Clear AI Backend"
readme = "README.md"
requires-python = ">=3.8"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py38"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]    # Allow unused imports in __init__.py
"tests/*" = ["ANN"]         # Ignore missing annotations in tests
"app/tests/*" = ["ANN"]     # Ignore missing annotations in tests

[tool.ruff.lint.pep8-naming]
# Enforce Enum classes to start with 'E' and other classes to follow PascalCase
ignore-names = ["^(([A-Z][a-z0-9]+)+|E[A-Z][a-zA-Z0-9]*)$"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.hatch.build.targets.wheel]
packages = ["app"] 